--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 Hi there, I'm Vikrant!
               </h1>
               <h2 class="mt-3 leading-relaxed text-zinc-900 dark:text-zinc-200">
-                I specialize in designing and developing robust server-side solutions that power seamless user experiences. With a strong foundation in [list key technologies, e.g., Python, Java, Node.js, SQL, REST APIs], I thrive on solving complex problems and optimizing systems for performance and scalability and am aspiring to be an illlustrator.
+                I specialize in designing and developing robust server-side solutions that power seamless user experiences. With a strong foundation in Python, Java, Node.js, SQL and REST APIs.  I thrive on solving complex problems and optimizing systems for performance and scalability and am aspiring to be an illlustrator.
               </h2>
             </div>
           </div>
