--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     type="text"
                     id="name"
                     name="name"
-                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-purple-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
+                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-beige-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
                   />
                 </div>
                 <div class="space-y-2">
@@ -488,7 +488,7 @@
                     type="email"
                     id="email"
                     name="email"
-                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-purple-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
+                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-beige-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
                   />
                 </div>
                 <div class="space-y-2">
@@ -499,12 +499,12 @@
                     id="message"
                     name="message"
                     rows="6"
-                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-purple-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
+                    class="block w-full rounded-lg border border-white px-5 py-3 leading-6 placeholder-zinc-500 focus:border-beige-500 focus:ring focus:ring-purple-500/50 dark:border-purple-950 dark:bg-purple-950 dark:placeholder-zinc-400 dark:focus:border-purple-500"
                   ></textarea>
                 </div>
                 <button
                   type="submit"
-                  class="inline-flex w-full items-center justify-center gap-2 rounded-lg border border-purple-700 bg-purple-700 px-5 py-3 text-sm font-semibold leading-6 text-white hover:border-purple-600 hover:bg-purple-600 hover:text-white focus:ring focus:ring-purple-400/50 active:border-purple-700 active:bg-purple-700 dark:focus:ring-purple-400/90 lg:w-auto"
+                  class="inline-flex w-full items-center justify-center gap-2 rounded-lg border border-beige-700 bg-beige-700 px-5 py-3 text-sm font-semibold leading-6 text-white hover:border-purple-600 hover:bg-purple-600 hover:text-white focus:ring focus:ring-purple-400/50 active:border-purple-700 active:bg-purple-700 dark:focus:ring-purple-400/90 lg:w-auto"
                 >
                   <span>Send Message</span>
                 </button>
