--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 </svg>
               </a>
               <a
-                href="javascript:void(0)"
+                href="https://www.instagram.com/luno_666"
                 class="text-zinc-400 hover:text-[#405de6]"
               >
                 <svg
@@ -565,7 +565,7 @@
                 </svg>
               </a>
               <a
-                href="javascript:void(0)"
+                href="https://github.com/luno141"
                 class="text-zinc-400 hover:text-[#333] dark:hover:text-zinc-50"
               >
                 <svg
